--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-social": "^5.1.1"
+    "bootstrap-social": "^5.1.1",
+    "vue": "^2.4.4",
+    "vue-router": "^2.7.0"
   }
 }
