--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap-social": "^5.1.1",
     "vue": "^2.4.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "store2": "store#^2.5.5"
   }
 }
